--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@discordjs/rest": "^0.3.0",
     "console": "^0.7.2",
     "discord.js": "^13.6.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "puppeteer": "^13.1.3",
+    "sequelize": "^6.15.0"
   }
 }
