--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,33 @@ version: "3.3"
 services:
   chefwildcat-bot:
     container_name: chefwildcat
+    build:
+      context: ./
+      dockerfile: Dockerfile
     volumes:
       - .:/usr/app/
       - /usr/app/node_modules
     ports:
       - 3001:3001
-    build:
-      context: ./
-      dockerfile: Dockerfile
+    environment: 
+      - EXTERNAL_PORT=3001
+      - PGUSER=admin
+      - PGPASSWORD=12345
+      - PGDATABASE=defaultdb
+      - PGHOST=pgdb
+    depends_on:
+      - pgdb
+  pgdb: 
+    container_name: pgdb
+    image: 'postgres:12'
+    ports: 
+      - 3002:3002
+    environment: 
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=12345
+      - POSTGRES_DB=defaultdb
+    volumes:
+      - pgdata1:/var/lib/postgresql/data
+    
+volumes:
+  pgdata1: {}
