--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "homepage": "https://github.com/Kmek/DiscordBot-Chef-Wildcat#readme",
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
+    "axios": "^0.26.1",
+    "cheerio": "^1.0.0-rc.10",
     "console": "^0.7.2",
     "discord.js": "^13.6.0",
     "pg": "^8.7.1",
-    "puppeteer": "^13.1.3",
     "sequelize": "^6.15.0"
   }
 }
